# mhctools

./: .gitignore  .travis.yml  AGENTS.md  LICENSE  README.md  RELEASING.md  develop.sh  lint.sh  pylintrc  pyproject.toml  requirements.txt  setup.py  test.sh
mhctools/: RELEASING.md  __init__.py  allele_normalization.py  alleles.py  base_commandline_predictor.py  base_predictor.py  bigmhc.py  binding_measure.py  binding_prediction.py  binding_prediction_collection.py  cleanup_context.py  common.py  epitope_collection.py  epitope_collection_builder.py  file_formats.py  iedb.py  input_file_formats.py  logging.py  mhc_iedb.py  mhc_random.py  mhcflurry.py  mixmhcpred.py  netchop.py  netmhc.py  netmhc3.py  netmhc4.py  netmhc_cons.py  netmhc_pan.py  netmhc_pan2.py  netmhc_pan28.py  netmhc_pan3.py  netmhc_pan4.py  netmhc_pan41.py  netmhc_pan42.py  netmhcii_pan.py  netmhcstabpan.py  output_file_formats.py  parsing.py  parsing_helpers.py  pepsickle.py  (+9 more)
test/: net_netmhc_pan.py  test_cli.py  test_known_class1_epitopes.py  test_known_class2_epitopes.py  test_known_epitopes.py  test_mhc_allele_names.py  test_mhc_formats.py  test_mhc_names.py  test_mhcflurry.py  test_mixmhcpred.py  test_netchop.py  test_netmhc_cons.py  test_netmhc_pan.py  test_netmhc_pan3.py  test_netmhc_pan_version.py  test_netmhc_version.py  test_netmhcii_pan.py  test_parsing_helpers.py  test_peptide_lengths.py  test_random.py
tests/: __init__.py  arch.py  common.py  predictor_classes.py  test_bigmhc.py  test_binding_prediction.py  test_binding_prediction_collection.py  test_check_results.py  test_class2_allele_formats.py  (+28 more)
(+6 files in other folders)
